Resolves: tdf#91637 avoid -1 string index

Change-Id: I006040f4589065141310fe2a89b8d2ba3e54ad2c